# apps/api/src/common/authenticated-request.ts
@@ -1,10 +1,12 @@
 import type { Request } from "express";
 
 export type AuthenticatedUser = {
+  defaultWorkspaceId: string | null;
   email: string;
   fullName: string | null;
   id: string;
   locale: string;
+  avatarUrl: string | null;
 };
 
 export type AuthenticatedSession = {
